=== HEAD

* Support registering per-Database custom range types in the pg_range extension (steveh) (#1174)

* Support :preconnect=>:concurrently Database option for preconnecting in separate threads (kch) (#1172)

* Make prepared_statements_safe plugin work correctly with CURRENT_DATE/CURRENT_TIMESTAMP defaults (jeremyevans) (#1168)

* Add validates_operator validation helper (petedmarsh) (#1170)

* Recognize additional unique constraint violation on Microsoft SQL Server (jeremyevans)

* Add :hash option to Dataset#(select|to)_hash(_groups)? methods for choosing object to populate (mwpastore) (#1167)

=== 4.33.0 (2016-04-01)

* Handle arbitrary objects passed as arguments to the association method (jeremyevans) (#1166)

* Handle array with multiple columns as Dataset#insert_conflict :target value on PostgreSQL (chanks) (#1165)

* Add Database#transaction :savepoint=>:only option, for only creating a savepoint if already inside a transaction (jeremyevans)

* Make Database#sequence_for_table on Oracle handle cases where the schema for a table cannot be determined (jeremyevans)

* The boolean_readers, boolean_subsets, and class_table_inheritance plugins no longer do blind rescues (jeremyevans) (#1162)

* Add Model.require_valid_table setting, if set to true doesn't swallow any errors for invalid tables (jeremyevans)

* Creating model classes inside a transaction when the table doesn't exist no longer rolls back the transaction on PostgreSQL (jeremyevans) (#1160)

* Sequel::Model no longer swallows many errors when subclassing or setting datasets (jeremyevans) (#1160)

* Handle altering column NULL settings for varchar(max) and text columns on MSSQL (Ilja Resch)

* Remove Sequel.firebird and Sequel.informix adapter methods (jeremyevans)

* Make graph_each extension handle result set splitting when using Dataset#first (jeremyevans)

* Allow raising Sequel::ValidationFailed and Sequel::HookFailed without an argument (jeremyevans)
